# app/controllers/api/v1/users_controller.rb
@@ -18,6 +18,9 @@ module Api
 
       # POST /api/v1/users
       def create
+        # Validate dates before creating user
+        return if invalid_dates?(params[:user])
+
         @user = User.new(user_params)
 
         # No need to set client_id, acts_as_tenant does this automatically
@@ -30,6 +33,9 @@ module Api
 
       # PATCH/PUT /api/v1/users/:user_id
       def update
+        # Validate dates before updating user
+        return if invalid_dates?(params[:user])
+        
         if @user.update(user_params)
           render json: @user
         else
@@ -54,6 +60,28 @@ module Api
 
       def user_params
         params.require(:user).permit(:user_id, :birth_date, :joining_date)
+      end
+      
+      def invalid_dates?(user_params)
+        if user_params[:birth_date].present?
+          begin
+            Date.parse(user_params[:birth_date])
+          rescue ArgumentError
+            render json: { error: "Birth date must be a valid date" }, status: :unprocessable_entity
+            return true
+          end
+        end
+        
+        if user_params[:joining_date].present?
+          begin
+            Date.parse(user_params[:joining_date])
+          rescue ArgumentError
+            render json: { error: "Joining date must be a valid date" }, status: :unprocessable_entity
+            return true
+          end
+        end
+        
+        false
       end
     end
   end
